1998-02-26 Arturo Espinosa  <arturo@nuclecu.unam.mx>

        * minefield.h: Added sign structure to unclutter the GtkMineField
	               struct.
	* minefield.c (gtk_mine_draw): Mines and flags are now centered.
        * minefield.c (gtk_mine_draw): Added flag mask declaration.
	* flag.xpm mine.xpm: Pixmaps are sharper now.
	* face*.xpm: Fixed faces transparencies.

1998-02-26 Arturo Espinosa  <arturo@nuclecu.unam.mx>

        * minefield.c (gtk_minefield_set_mines): font position is forced
	              by setting numstr[0].gc to zero.
	
1998-02-26 Arturo Espinosa  <arturo@nuclecu.unam.mx>

        * minefield.c (gtk_minefield_expose): Now the size of the font
	              is proportional to minesize.
	
1998-02-26 Arturo Espinosa  <arturo@nuclecu.unam.mx>

        * gnomine.c (main): Using new scores stock pixmap and the
	                    stock buttons for OK & CANCEL
	
1998-02-26 Arturo Espinosa  <arturo@nuclecu.unam.mx>

	* gnomine.c (main): Help is right-justified.

Tue Feb 25 23:10 1998  Arturo Espinosa  <arturo@nuclecu.unam.mx>

	* gnomine.c (main): now minefield is always centered.

Tue Feb 25 23:10 1998  Arturo Espinosa  <arturo@nuclecu.unam.mx>

	* gnomine.c (main): using gnome_pixmap_new_from_xpm_d instead of
	                    gnome_create_pixmap_widget_d

Tue Feb 17 21:50:19 1998  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnomine.c (main): Remove spurious call to gtk_init

1998-02-19  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnomine.c (main): Added app_id "gnomine".

1998-02-16  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* minefield.c: Modified the GtkMineField widget to use a
	GdkColorContext for color allocation instead of the old (broken!
	stupid! brain-dead!) gnome-colors stuff :-)

Donnie Barnes <djb@redhat.com>:

	* Added resizing of squares

Mon Feb 16 19:58:06 KST 1998  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* Makefile.am (INCLUDES): Define GNOMELOCALEDIR.

	* gnomine.c (main): Added bindtextdomain().